# dannce-pytorch

./: pyproject.toml  setup.py
dannce/engine/data/: processing.py  serve_data_DANNCE.py
dannce/utils/: compickleToLabel3D.py  makeStructuredData.py  makeStructuredDataNoMocap.py  makeStructuredData_DLC.py
dannce/utils/rat7m/: plot2DProjection.py
